option(PL_GRAPH_ALGORITHM "PL_GRAPH_ALGORITHM" ON)

if(PL_GRAPH_ALGORITHM OR BUILD_ALL_PLUGINS)
    file(GLOB_RECURSE GRAPH_ALGORITHM_INC ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
    file(GLOB_RECURSE GRAPH_ALGORITHM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
    file(GLOB_RECURSE GRAPH_ALGORITHM_PYTHON_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/*.cpp)

    hal_add_plugin(graph_algorithm
        SHARED
        PYDOC SPHINX_DOC_INDEX_FILE ${CMAKE_CURRENT_SOURCE_DIR}/documentation/graph_algorithm.rst
        HEADER ${GRAPH_ALGORITHM_INC}
        SOURCES ${GRAPH_ALGORITHM_SRC} ${GRAPH_ALGORITHM_PYTHON_SRC}
        INCLUDES PUBLIC $<BUILD_INTERFACE:${igraph_INCLUDES}>
        LINK_LIBRARIES PUBLIC ${igraph_LIBRARIES}
    )

add_dependencies(graph_algorithm igraph_0_10)

endif()
