option(PL_IGRAPH "PL_IGRAPH" OFF)
if(PL_IGRAPH OR BUILD_ALL_PLUGINS)
    include_directories(${IGRAPH_INCLUDES})
    include_directories(${BUDDY_INCLUDE_DIR})
    include_directories(SYSTEM ${PYBIND11_INCLUDE_DIR} SYSTEM ${PYTHON_INCLUDE_DIRS})
    include_directories(AFTER "${CMAKE_CURRENT_SOURCE_DIR}/include")

    file(GLOB_RECURSE IGRAPH_INC ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
    file(GLOB_RECURSE IGRAPH_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
    file(GLOB_RECURSE IGRAPH_PYTHON_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/*.cpp)

    add_library(igraph SHARED ${IGRAPH_SRC} ${IGRAPH_PYTHON_SRC} ${IGRAPH_INC})

    if(APPLE AND CMAKE_HOST_APPLE)
        set_target_properties(igraph PROPERTIES SUFFIX ".so")
        set_target_properties(igraph PROPERTIES INSTALL_NAME_DIR ${PLUGIN_LIBRARY_INSTALL_DIRECTORY})
    endif(APPLE AND CMAKE_HOST_APPLE)

    target_link_libraries(igraph ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::module ${BUDDY_LIBRARY} ${IGRAPH_LIBRARIES})

    install(TARGETS igraph LIBRARY DESTINATION ${LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/igraph/include/)

    if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
        add_sanitizers(igraph)
    endif()
endif()
